[gd_scene load_steps=11 format=3 uid="uid://brb1bn30d0m2f"]

[ext_resource type="Script" path="res://player/player.gd" id="1_8w0x0"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_f5joe"]
albedo_color = Color(0.737255, 0, 1, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_fpvjn"]
material = SubResource("StandardMaterial3D_f5joe")

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_5qscb"]

[sub_resource type="SphereShape3D" id="SphereShape3D_cc1mm"]
radius = 1.0

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_xbdbh"]

[sub_resource type="GDScript" id="GDScript_61ctc"]
script/source = "extends Node3D


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass
"

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_v848h"]
albedo_color = Color(0.996078, 0.996078, 0, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_1dpqe"]
material = SubResource("StandardMaterial3D_v848h")
top_radius = 1.0
bottom_radius = 0.001
height = 4.0

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_37j4v"]

[node name="player" type="CharacterBody3D" groups=["player"]]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, 0, 0)
script = ExtResource("1_8w0x0")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1.25, 0, 0, 0, 1.25, 0, 0, 0, 1.25, 0, 0, 0)

[node name="Body" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_fpvjn")
skeleton = NodePath("../CollisionShape3D")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_5qscb")

[node name="Interaction Compoents" type="Node3D" parent="."]

[node name="InteractionArea" type="Area3D" parent="Interaction Compoents"]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Interaction Compoents/InteractionArea"]
shape = SubResource("SphereShape3D_cc1mm")

[node name="small_interaction" type="Area3D" parent="Interaction Compoents"]
collision_layer = 0
collision_mask = 16
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Interaction Compoents/small_interaction"]
shape = SubResource("CapsuleShape3D_xbdbh")

[node name="CameraController" type="Node3D" parent="."]
top_level = true

[node name="Camera_target" type="Node3D" parent="CameraController"]
transform = Transform3D(1, 0, 0, 0, 0.922059, 0.387049, 0, -0.387049, 0.922059, 0, 1.09032, 2.92423)
script = SubResource("GDScript_61ctc")

[node name="Camera3D" type="Camera3D" parent="CameraController/Camera_target"]
transform = Transform3D(1, 0, 0, 0, 1, -2.98023e-08, 0, 2.98023e-08, 1, 0, 0, 0)

[node name="Nose" type="MeshInstance3D" parent="."]
transform = Transform3D(0.25, 0, 0, 0, -0.176777, -0.176777, 0, 0.176777, -0.176777, 0, 0.963961, -0.261234)
mesh = SubResource("CylinderMesh_1dpqe")
skeleton = NodePath("../Body")

[node name="Water" type="Node3D" parent="."]

[node name="Area3D" type="Area3D" parent="Water"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Water/Area3D"]
shape = SubResource("CapsuleShape3D_37j4v")

[connection signal="area_entered" from="Interaction Compoents/InteractionArea" to="." method="_on_interaction_area_area_entered"]
[connection signal="area_exited" from="Interaction Compoents/InteractionArea" to="." method="_on_interaction_area_area_exited"]
[connection signal="area_exited" from="Interaction Compoents/small_interaction" to="." method="_on_small_interaction_area_exited"]
[connection signal="area_entered" from="Water/Area3D" to="." method="_on_area_3d_area_entered"]
